# libmyrtx

./: .clang-format  .cursorrules.md  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh
.github/: pull_request_template.md
.github/issues/: 001-arena-temp-markers.md  002-context-ownership.md  003-string-replace-capacity.md  004-align-substring-behavior.md  005-normalize-collections-comments.md  006-expand-ci-matrix.md  007-add-coverage.md  008-sanitizer-toggles-cmake.md  009-benchmarks.md  010-docs-ownership-scratch-pool.md  011-precommit-extras.md  012-cmake-package-config.md
.github/workflows/: ci.yml
docs/: .gitignore  Doxyfile  Makefile  README.md  build_docs.sh  requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/api/: collections.rst  context.rst  hashtable.rst  index.rst  memory.rst  string.rst
docs/source/examples/: arena_allocator_example.rst  avl_tree_example.rst  context_example.rst  hashtable_example.rst  index.rst  string_example.rst
docs/source/guides/: arena_allocator.rst  avl_tree.rst  context.rst  hash_table.rst  index.rst  string.rst
examples/: CMakeLists.txt  arena_example.c  avl_tree_example.c  context_example.c  hash_table_example.c  scratch_example.c  string_example.c  string_type_example.c  string_utils_example.c
include/myrtx/: myrtx.h  version.h.in
include/myrtx/collections/: avl_tree.h  hash_table.h
include/myrtx/context/: context.h
include/myrtx/memory/: arena_allocator.h
include/myrtx/string/: string.h
scripts/: create_issues.sh
src/: CMakeLists.txt
src/collections/: CMakeLists.txt  avl_tree.c  hash_table.c
src/context/: CMakeLists.txt  context.c
src/memory/: CMakeLists.txt  arena_allocator.c
src/string/: CMakeLists.txt  string.c  string_type.c
tests/: CMakeLists.txt  arena_test.c  avl_tree_test.c  context_test.c  hash_table_test.c  string_test.c  string_type_test.c  string_utils_test.c
